# scikit-hep

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .project  .travis.yml  .zenodo.json  AGENTS.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  codecov.yml  index.html  pyproject.toml  requirements.txt  requirements_current_release.txt  setup.cfg  setup.py  setuputils.py  tox.ini
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  current_releases.yml  pythonpackage.yml
dev/: manifesto.rst  structure.html
doc/: Makefile  about.rst  affiliations.rst  conf.py  contributing.rst  documentation.rst  faq.rst  get-in-touch.rst  help.rst  ideas.rst  index.rst  installation.rst  resources.rst
doc/_static/: mathjax_conf.js  scikit-hep.css
doc/_templates/: layout.html
doc/api/: api.rst  constants.rst  dataset.rst  math.rst  modeling.rst  pdg.rst  simulation.rst  units.rst  utils.rst  visual.rst
doc/examples/: examples.rst
doc/examples/modeling/: bayesian_blocks.ipynb  ex_bb.rst
doc/examples/visual/: errorbars.ipynb  ex_visual.rst
doc/scikit-hep/: documentation.rst  installation.rst
doc/scikit-hep/api/: api.rst  constants.rst  modeling.rst  visual.rst
doc/scikit-hep/examples/visual/: errorbars.ipynb
experiments/: test_typesystem.py
experiments/typesystem/: __init__.py  numpy.py  numpyschema.py
rc/: scikitheprc.template
scripts/: skhep-info  skhep-test-doc
skhep/: __init__.py  _show_versions.py  _version.py  backends.py  exceptions.py  py23.py
skhep/constants/: __init__.py  constants.py
skhep/data/: mass_width_2014.mcd  mass_width_2016.mcd  mass_width_2017.mcd
skhep/dataset/: __init__.py  defs.py  numpydataset.py  rootdataset.py  selection.py
skhep/math/: __init__.py  bayesian_blocks.py  geometry.py  isclose.py  kinematics.py  numbautils.py  numeric.py  phsp.py  vectors.py
skhep/modeling/: __init__.py  bayesian_blocks.py
skhep/pdg/: __init__.py  pdt.py
skhep/simulation/: __init__.py  pdgid.py
skhep/to/: __init__.py
skhep/to/numpy/: __init__.py
skhep/to/pandas/: __init__.py
skhep/to/root/: __init__.py
skhep/units/: __init__.py  prefixes.py  units.py
skhep/util/: decorators.py  dependencies.py  provenance.py
skhep/utils/: __init__.py  _show_versions.py  decorators.py  dependencies.py  exceptions.py  provenance.py  py23.py
skhep/utils/hep_ipython_tools/: calculation_list.py  ipython_handler.py  viewer.py
skhep/utils/hep_ipython_tools/tests/: fixtures.py
skhep/utils/ipythontools/: __init__.py  calculation.py  calculation_process.py  calculation_queue.py  entities.py  information.py
skhep/visual/: .mpl_plotter.py.swo  .mpl_plotter.py.swp  __init__.py  fill_between_steps.py  histograms.py  mpl_plotter.py
tests/: __init__.py  conftest.py  test_show_versions.py  test_units.py
tests/constants/: test_constants.py
tests/data/modeling/: answers_bayesian_blocks.npz
tests/data/visual/: answers_blocks_hist.npz  answers_blocks_hist2.npz  answers_error_bars.npz  answers_error_bars2.npz  answers_error_bars3.npz  answers_error_bars4.npz  answers_error_bars_multi.npz  answers_error_bars_stacked.npz  answers_error_bars_stacked2.npz  answers_error_bars_stacked3.npz  answers_error_bars_weighted.npz  answers_multi_hist1.npz  answers_ratio_plot.npz  answers_ratio_plot_log.npz  answers_ratio_plot_stacked.npz  answers_simple_hist1.npz  answers_simple_hist2.npz  answers_simple_hist3.npz  answers_simple_hist4.npz
tests/dataset/: test_defs.py  test_numpydataset.py  test_rootdataset.py  test_selection.py
tests/math/: test_geometry.py  test_kinematics.py  test_root_loretzvectors.py  test_vectors.py
tests/modeling/: test_bayesianblocks.py
tests/pdg/: test_pdt.py
tests/simulation/: test_pdgid.py
tests/units/: test_prefixes.py  test_units.py
tests/utils/: test_provenance.py
tests/utils/hep_ipython_tools/: test_IPythonHandler.py  test_calculation.py  test_calculationList.py  test_calculationProcess.py  test_calculationQueue.py  test_entities.py  test_environmentInformation.py
tests/visual/: conftest.py  test_hists.py
tests/visual/answers/: answers_simple_hist2.npz
