[build-system]
requires = [
    "setuptools>=42.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
addopts = [
    "-ra",
    "--cov=skhep",
    "--cov-branch",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]
log_cli_level = "info"
testpaths = "tests"

[tool.check-sdist]
git-only = [
    ".pre-commit-config.yaml",
    "doc/**",
    "requirements_current_release.txt",
    "scripts/skhep-info",
    ".gitignore",
]
