[bdist_wheel]
universal=1

[metadata]
name = scikit-hep
author = the scikit-hep developers
author_email = scikit-hep-admins@googlegroups.com
description = Metapackage of Scikit-HEP project tools for Particle Physics.
long_description = file: README.rst
url = https://github.com/scikit-hep/scikit-hep/
license = BSD 3-Clause License
version = attr: skhep._version.__version__
classifiers =
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Topic :: Utilities
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS
  License :: OSI Approved
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: C++
  Programming Language :: Cython
  Development Status :: 4 - Beta

[options]
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude =
    tests

[check-manifest]
ignore =
    .pre-commit-config.yaml
    doc/*
    requirements_current_release.txt
    scripts/skhep-info
    setuputils.py
    tests/*
