[metadata]
name = scikit-hep
author = the scikit-hep admins
author_email = scikit-hep-admins@googlegroups.com
description = Metapackage of Scikit-HEP project libraries for Particle Physics.
long_description = file: README.rst
url = https://github.com/scikit-hep/scikit-hep/
license = BSD 3-Clause License
version = attr: skhep._version.__version__
classifiers =
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Topic :: Utilities
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS
  License :: OSI Approved
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: C++
  Programming Language :: Cython
  Development Status :: 4 - Beta

[options]
python_requires = >=3.9
packages = find:

[options.extras_require]
test =
  pytest >=6.0,<8.1.0  #  cap because of https://github.com/pytest-dev/pytest/issues/11779
  pytest-cov

[options.packages.find]
exclude =
    tests
